kubernetes/apps/default/livekit/jwt/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lk-jwt
  annotations:
    external-dns.alpha.kubernetes.io/hostname: livekit-jwt.goyangi.io
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      path: /healthz
      conditions: ["[STATUS] == 200"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - livekit-jwt.goyangi.io
  rules:
    - backendRefs:
        - name: lk-jwt
          port: 8080
